src/test/ui/impl-trait/issues/issue-84073.stderr
error[E0282]: type annotations needed for `RaceBuilder<T, Never<T>>`
  --> $DIR/issue-84073.rs:32:16
   |
LL |     Race::new(|race| race.when());
   |                ^^^^ consider giving this closure parameter the explicit type `RaceBuilder<T, Never<T>>`, where the type parameter `T` is specified

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
